--- a/session08/majorproject/majorapp/templates/major_list.html
+++ b/session08/majorproject/majorapp/templates/major_list.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% load static %}
+    <script>
+        (function(d) {
+          var config = {
+            kitId: 'hjl4uhk',
+            scriptTimeout: 3000,
+            async: true
+          },
+          h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+        })(document);
+      </script>
+    <link rel="stylesheet" type="text/css" href="{% static 'major_list.css' %}">
 </head>
 <body>
     <h2>개설 과목 목록</h2>
-    <ol>
+    <am><ol>
         {% for subject in subjects %}
         <li>
             {{ subject.Subject_name }} | {{ subject.Subject_major }} | {{ subject.professor }} | <a href="{% url 'EditSubject' subject.pk %}">수정</a> 
@@ -16,6 +28,6 @@
             <br>
             {{ subject.memo }}
         </li>
-        {% endfor %} 
+        {% endfor %} </am>
 </body>
 </html>
