--- a/session08/majorproject/majorapp/static/home.css
+++ b/session08/majorproject/majorapp/static/home.css
@@ -1,62 +1,101 @@
-h2 { 
+.up { 
     font-family: pretendard, sans-serif;
-    font-size: 28px;
+    font-size: 20px;
     font-weight: 600;
     font-style: normal;
-    color:rgb(255, 255, 255);
+    color:#efeeff;
     text-align: center;
-    background-color: #4A62F8;
-    width: 130px;
+    background: linear-gradient(30deg, #5b74ff, #9488ff );
+    width: 150px;
     height: 40px;
     border-radius: 50px;
-    padding-top: 5px;
-    margin-left:30px;
+    padding-top: 15px;
+    margin-top: 20px;
+    box-shadow: 10px 5px 20px #c4c9d1;
 }
 
-h3 {
+
+h0 {
+    margin-left: 410px;
+    margin-top: 20px;
+    align-items: center;
+}
+
+
+
+h1 {
+    margin-left:380px;
+    margin-top: 20px;
+    align-items: center;
+}
+
+middle1 {
     font-family: pretendard, sans-serif;
-    font-size: 15px;
-    font-weight: 100;
-    letter-spacing: 2px;
-    text-align: center;
-    background: linear-gradient(80deg, #EFF2F9, #ffffff );
+    background : #F6F5FA;
     border-radius: 20px;
-    width: 400px;
-    height: auto;
-    padding: 10px;
-    box-shadow: 10px 5px 20px #D4D7DC;
-    margin-left:30px;
-    margin-top:30px;
+    border: 5px solid #ffffff;
+    width: 300px;
+    height: 400px;
+    color: #7775A1;
+    padding: 30px;
+    margin-left: 270px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    box-shadow: inset 4px 0px 20px #D2D1E0, 10px 10px 20px #c4c9d1;
 }
 
-h4 { 
+middle2 {
     font-family: pretendard, sans-serif;
-    font-size: 28px;
+    background: #F6F5FA;
+    border-radius: 20px;
+    border: 5px solid #ffffff;
+    color: #7775A1;
+    width: 300px;
+    height: 400px;
+    padding: 30px;
+    margin-left: 190px;
+    margin-bottom: 20px;
+    margin-top: 30px;
+    box-shadow: inset 4px 0px 20px #D2D1E0, 10px 10px 20px #c4c9d1;
+}
+
+h9 {
+    font-family: pretendard, sans-serif;
+    font-size: 20px;
     font-weight: 600;
     font-style: normal;
-    color:rgb(255, 255, 255);
+    color:#7775A1;
     text-align: center;
-    background-color: #4A62F8;
-    width: 130px;
+    background: linear-gradient(40deg, #ebeeff, #ffffff );
+    width: 150px;
     height: 40px;
     border-radius: 50px;
-    padding-top: 5px;
-    margin-left:30px;
-    margin-bottom:-40px;
-    position:absolute;
+    padding-top: 15px;
+    box-shadow: 10px 5px 20px #c4c9d1;
+    margin-left:380px;
+    margin-bottom: 40px;
+    margin-top: 20px;
 }
 
-h5 {
+h8 {
     font-family: pretendard, sans-serif;
-    font-size: 15px;
-    font-weight: 100;
-    letter-spacing: 2px;
-    background: linear-gradient(80deg, #EFF2F9, #ffffff );
-    border-radius: 20px;
-    width: 400px;
-    height: auto;
-    padding: 10px;
-    box-shadow: 10px 5px 20px #D4D7DC;
-    margin-left:30px;
-    margin-top:130px;
+    font-size: 20px;
+    font-weight: 600;
+    font-style: normal;
+    color:#7775A1;
+    text-align: center;
+    background: linear-gradient(40deg, #ebeeff, #ffffff );
+    width: 150px;
+    height: 40px;
+    border-radius: 50px;
+    padding-top: 15px;
+    box-shadow: 10px 5px 20px #c4c9d1;
+    margin-left:410px;
+    margin-bottom: 40px;
+    margin-top: 20px;
+}
+
+
+div{
+    display: flex;
 }
